# cljs-static-hermes

./: .gitignore  .gitmodules  README.md  deps.edn  package-lock.json  package.json  shadow-cljs.edn
.github/: copilot-instructions.md
.github/workflows/: build.yml
imgui-react-runtime/: .gitignore  CLAUDE.md  CMakeLists.txt  OPTIMIZATIONS.md  README.md
imgui-react-runtime/cmake/: HermesExternal.cmake  hermes.cmake  react-imgui.cmake
imgui-react-runtime/examples/: CMakeLists.txt
imgui-react-runtime/examples/persistent-vector-demo/: CMakeLists.txt  README.md  main.cpp
imgui-react-runtime/examples/skia/: CMakeLists.txt  core.cpp
imgui-react-runtime/examples/uix/: CMakeLists.txt  core.cpp
imgui-react-runtime/lib/: CMakeLists.txt
imgui-react-runtime/lib/imgui-runtime/: CMakeLists.txt  WebSocketSupport.cpp  WebSocketSupport.h  imgui-runtime.cpp
imgui-react-runtime/lib/imgui-unit/: asciiz.js  renderer.js
imgui-react-runtime/lib/jslib-unit/: jslib.js
imgui-react-runtime/lib/native/: CMakeLists.txt  PersistentMap.cpp  PersistentMap.h  PersistentVector.cpp  PersistentVector.h  PersistentVector_test.cpp  StoredValue.h
imgui-react-runtime/lib/native-support/: CMakeLists.txt
imgui-react-runtime/lib/react-imgui-reconciler/: reconciler.js
imgui-react-runtime/lib/skia-unit/: CMakeLists.txt  main.js  renderer.js  skia_externs.js  skia_externs_cwrap.cpp  yoga_layout.js
src/hermes/: app.cljs  client.cljs  devtools.cljs  persistent_map.cljs  persistent_map_example.cljs  persistent_vector.cljs  persistent_vector_example.cljs
src/hermes/repl/: client.cljs
src/skia/: app.cljs
